# saas-marketing-engine

./: .gitignore  .pre-commit-config.yaml  BRAINSTORM.md  PRD.md  README.md  TECH_SPEC.md  USER_STORIES.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: celery_app.py  config.py  db.py  main.py  scheduler.py  worker.py  workspace.py
backend/app/ai/: client.py  pricing.py
backend/app/channels/: __init__.py  base.py  blog.py  podcast.py  reddit.py  youtube.py
backend/app/integrations/: __init__.py  email.py  stripe_api.py
backend/app/models/: __init__.py  channel.py  content_item.py  credential.py  funnel_event.py  gpu_lease.py  heartbeat_digest.py  job_run.py  metric_event.py  (+4 more)
backend/tests/: test_app_boots.py  test_attribution.py  test_brand_kit.py  test_channel_model.py  test_channels_api.py  test_channels_setup.py  test_checkout.py  test_config.py  test_content_api.py  test_content_calendar_api.py  test_crank.py  test_critic.py  test_db_backfill.py  test_generate.py  test_generate_podcast.py  test_generate_video.py  test_gpu_orchestrator.py  test_gpu_provisioner.py  test_guard.py  test_heartbeat.py  test_launch_checklist.py  test_media_podcast_queue.py  test_media_queue.py  test_media_video_queue.py  test_metrics_api.py  test_no_plaintext_logging.py  test_oauth_refresh.py  test_podcast_adapter.py  test_podcast_render.py  test_postgres_path.py  test_pricing.py  test_product_api.py  test_product_model.py  test_public_funnel.py  test_publish.py  test_qa_checklist.py  test_qa_gate.py  test_retract.py  test_site_template.py  test_smoke_test.py  (+12 more)
(+80 files in other folders)
